# iteza-api

./: .gitignore  README.md
mycheck/: .gitignore  Procfile  README.md  koo.pub  mycheck_dev.db.mv.db  project.clj
mycheck/bakup/: mycheck_dev.db.mv.db
mycheck/env/dev/clj/: user.clj
mycheck/env/dev/clj/mycheck/: config.clj  dev_middleware.clj
mycheck/env/dev/resources/: config.edn  log4j.properties
mycheck/env/prod/clj/mycheck/: config.clj
mycheck/env/prod/resources/: config.edn  log4j.properties
mycheck/resources/docs/: docs.md
mycheck/resources/migrations/: 20160308235954-add-account-table.up.sql  20160312083555-checks.up.sql  20160320074401-add-users-table.up.sql
mycheck/resources/public/css/: screen.css
mycheck/resources/sql/: account_queries.sql  check_queries.sql  queries.sql  token_queries.sql
mycheck/resources/templates/: about.html  approve.html  auth.html  base.html  coupon.html  docs.html  home.html  regist.html  sample.xml
mycheck/src/clj/mycheck/: core.clj  handler.clj  layout.clj  middleware.clj
mycheck/src/clj/mycheck/api/: authy.clj  core.clj  mufg.clj  twillio.clj
mycheck/src/clj/mycheck/db/: core.clj  (+1 more)
photo2value/: .gitignore  CMakeLists.txt  install.txt
photo2value/src/: Main.cpp
scripts/: .gitignore  dummy_facevalue.sh  mail.rb  mailman.rb
scripts/jobs/: confirm_job.rb  deposit_confirm_job.rb  deposit_job.rb  deposit_request_job.rb  receive_job.rb
scripts/modules/: send_mail.rb
templates/: deposit_confirm.txt  deposit_request.txt  deposit_success.txt  receive_failure.txt  receive_success.txt  receive_wrong_check.txt
(+4 files in other folders)
